@@ -1,3 +1,8 @@
+2006-02-20  Hans Rakers <hans at parse dot nl>
+
+	* Fixed static_members handling for php-5.0. Broke this while
+	  working on PHP-5.1 support. Lost in ifdef statements ;)
+
 2006-02-19  Hans Rakers <hans at parse dot nl>
 
 	* Restored PHP4 compatibility
